Minor Label changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="banner_content">
             <h1 class="banner_title">IHUE PEOPLE</h1><br/>
             <h2>Bridging Talent and Opportunity</h2>
-            <p class="banner_description">@ IHUE, we are more than just recruiters; we are architects of opportunity. Our mission is to connect exceptional talent with organizations hungry for innovation. As a high-end recruitment organization, we specialize in sourcing and placing technical candidates with niche skills, including architects and senior roles.</p><a class="btn btn_primary"><i class="fas fa-users"></i> Our Service</a>
+            <p class="banner_description">@ IHUE, we are more than just recruiters; we are architects of opportunity. Our mission is to connect exceptional talent with organizations hungry for innovation. As a high-end recruitment organization, we specialize in sourcing and placing developers, architects with niche skills, including architects and senior roles.</p><a class="btn btn_primary"><i class="fas fa-users"></i> Our Service</a>
             <div class="banner_services_wrap row">
               <div class="col">
                 <div class="iconbox_item iconbox_overicon">
@@ -208,7 +208,7 @@
               <div class="footer_widget footer_about">
                 <div class="site_logo"><a href="index.html"><img class="logo_before" src="assets/images/logo/logo.svg"
                       alt="iHUE PEOPLE"></a></div>
-                <p>Our mission is to connect exceptional talent with organizations hungry for innovation. As a high-end recruitment organization, we specialize in sourcing and placing technical candidates with niche skills, including architects and senior roles.</p>
+                <p>Our mission is to connect exceptional talent with organizations hungry for innovation. As a high-end recruitment organization, we specialize in sourcing and placing developers, architects with niche skills, including architects and senior roles.</p>
                 <div class="footer_hotline iconbox_item iconbox_lefticon">
                   <div class="item_icon"><i class="fas fa-phone"></i></div>
                   <div class="item_content">
