Added Few more points

--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
                 <p>As a startup founded by industry veterans, we understand the challenges faced by organizations in today’s fast-paced world. IHUE PEOPLE acts as the bridge that spans the gap between your HR needs and the talent pool. Whether you’re a tech giant or a nimble startup, we’ve got your back.</p>
               </div>
             </div>
+            
+            <div class="col col-lg-4">
+              <div class="service_item" style="background-image: url('assets/images/shape/shape_path_1.svg');">
+                <div class="title_wrap">
+                  <div class="item_icon"><img src="assets/images/icon/dyn-recruit.svg" alt="Dynamic Recruitment"></div>
+                  <h3 class="item_title mb-0">Dynamic Recruitment</h3>
+                </div>
+                <br/>
+                <p> A blend of traditional recruitment wisdom and cutting-edge technical insight.</p>
+              </div>
+            </div>
             <div class="col col-lg-4">
               <div class="service_item" style="background-image: url('assets/images/shape/shape_path_1.svg');">
                 <div class="title_wrap">
@@ -133,7 +144,18 @@
                   <h3 class="item_title mb-0">End-to-End Coordination</h3>
                 </div>
                 <br/>
-                <p>Our expertise extends beyond sourcing. From crafting compelling job descriptions (JDs) to facilitating seamless onboarding, we handle the entire recruitment lifecycle. IHUE PEOPLE ensures that your hiring process is efficient, effective, and aligned with your organizational goals.</p>
+                <p>Our expertise extends beyond sourcing. From crafting compelling job descriptions (JDs) to facilitating seamless onboarding, we handle the entire recruitment lifecycle.</p>
+              </div>
+            </div>
+            
+            <div class="col col-lg-4">
+              <div class="service_item" style="background-image: url('assets/images/shape/shape_path_1.svg');">
+                <div class="title_wrap">
+                  <div class="item_icon"><img src="assets/images/icon/diamond.svg" alt="Consultative Excellence"></div>
+                  <h3 class="item_title mb-0">Consultative Excellence</h3>
+                </div>
+                <br/>
+                <p> Providing more than just recruitment; we offer strategic staffing consultations.</p>
               </div>
             </div>
           </div>
@@ -227,6 +249,8 @@
                     <li><span>Saturday:</span> <span>On need basis</span></li>
                     <li><span>Sunday:</span> <span><strong>Closed</strong></span></li>
                   </ul>
+                  <br/>
+                  <h3 class="footer_widget_title">Dedicated to excellence, available for your future</h3>
                 </div>
               </div>
             </div>
