--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="zxx">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>iHUE PEOPLE</title>
+  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>People By IHUE | High-End Recruitment & Executive Search for IT & Non-IT</title>
+  <meta name="description" content="People By IHUE, architects of opportunity. We specialize in sourcing and placing experienced IT & non-IT talent with niche skills for senior and executive roles.">
+  <meta name="keywords" content="recruitment agency, high-end recruitment, executive search, IT recruitment, non-IT hiring, senior roles, technical hiring, niche skills, talent acquisition, career opportunities, IT jobs, non-IT jobs, experienced candidates, IT architects, hiring solutions, India">
+  
   <link rel="shortcut icon" href="assets/images/logo/logo.ico">
   <link rel="stylesheet" type="text/css" href="assets/css/all.css">
 </head>
